fix footer spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -87,7 +87,7 @@ a:link  {
 }
 
 #footer-section {
-    margin-top: 40px;
+    margin-top: 45px;
     margin-bottom: 12px;
 }
 
